# tobsterlang

./: .gitignore  CMakeLists.txt  README.md  codegen.cpp  codegen.h  compiler.cpp  compiler.h  main.cpp  optimizer.cpp  optimizer.h  options.h  parser.cpp  parser.h  utils.h
.github/workflows/: build.yml
examples/: hello.xml  sum.input  sum.xml  test_examples.sh  var.xml
